main working in cellphone

--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
 </head>
 
 <body>
-    <header>
+    <nav>
         <img src="./meta/logo.svg" alt="logo">
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre Mim</a></li>
+            <li><a href="#">Sobre</a></li>
             <li><a href="#">Serviços</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
-    </header>
+    </nav>
 
     <main>
         <div class="main-info-side">
             <h1>Olá</h1>
             <p class="main-subtitle">Aprendizado para além da sala de aula</p>
             <p class="main-text">
-                Se você está buscando um(a) Tutor(a) de matemática que proporcione a atenção personalizada que você
-                merece, não procure mais! Sou um(a) professor(a) particular competente e com muitos anos de experiência.
-                Ofereço serviços de Tutor(a) de matemática desde 2000 na área de São Paulo. Posso ajudar você a
+                Se você está buscando um Tutor de matemática que proporcione a atenção personalizada que você
+                merece, não procure mais! Sou um professor particular competente e com muitos anos de experiência.
+                Ofereço serviços de Tutor de matemática desde 2000 na área de São Paulo. Posso ajudar você a
                 descobrir todo o seu potencial com a atenção personalizada que você precisa para alcançar o sucesso.
             </p>
         </div>
-        <div>
+        <div class="main-img">
             <img src="./meta/MAIN IMAGE.svg" alt="main">
         </div>
     </main>
+
+    <section>
+        <div></div>
+        <div></div>
+    </section>
 </body>
 
 </html>
