--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
             <h1>Olá</h1>
             <p class="main-subtitle">Aprendizado para além da sala de aula</p>
             <p class="main-text">
-                Se você está buscando um Tutor de matemática que proporcione a atenção personalizada que você
-                merece, não procure mais! Sou um professor particular competente e com muitos anos de experiência.
-                Ofereço serviços de Tutor de matemática desde 2000 na área de São Paulo. Posso ajudar você a
-                descobrir todo o seu potencial com a atenção personalizada que você precisa para alcançar o sucesso.
+                Se você está buscando um Tutor de matemática que proporcione a atenção personalizada que você merece, não procure mais! Sou um professor particular competente e com 3 anos de experiência. Ofereço serviços de Tutor de matemática desde 2017 na área de Recife.
+                Posso ajudar você a descobrir todo o seu potencial com a atenção personalizada que você precisa para alcançar o sucesso.
             </p>
         </div>
         <div class="main-img">
@@ -36,8 +34,23 @@
     </main>
 
     <section>
-        <div></div>
-        <div></div>
+        <h2>
+            Aulas que ofereço
+        </h2>
+        <p>Prometendo orientação personalizada a cada passo do caminho</p>
+        <div class="grid-container">
+            <img src="./meta/pic-1.png" alt="pic-1" class="pic1 section-block">
+            <div class="service1 section-block"></div>
+
+            <img src="./meta/pic-2.png" alt="pic-2" class="pic2 section-block">
+            <div class="service2 section-block"></div>
+
+            <img src="./meta/pic-3.png" alt="pic-3" class="pic3 section-block">
+            <div class="service3 section-block"></div>
+
+            <img src="./meta/pic-4.png" alt="pic-4" class="pic4 section-block">
+            <div class="service4 section-block"></div>
+        </div>
     </section>
 </body>
 
