everything is working

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <nav>
         <img src="./meta/logo.svg" alt="logo">
         <ul>
-            <li><a href="#">Inicio</a></li>
+            <li><a href="#main">Início</a></li>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">Serviços</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#section">Serviços</a></li>
+            <li><a href="#contact">Contato</a></li>
         </ul>
     </nav>
 
-    <main>
+    <main id="main">
         <div class="main-info-side">
             <h1>Olá</h1>
             <p class="main-subtitle">Aprendizado para além da sala de aula</p>
@@ -33,25 +33,56 @@
         </div>
     </main>
 
-    <section>
+    <section id="section">
         <h2>
             Aulas que ofereço
         </h2>
-        <p>Prometendo orientação personalizada a cada passo do caminho</p>
+        <p class="section-subtitle">Prometendo orientação personalizada a cada passo do caminho</p>
         <div class="grid-container">
             <img src="./meta/pic-1.png" alt="pic-1" class="pic1 section-block">
-            <div class="service1 section-block"></div>
+            <div class="service1 section-block">
+                <div>
+                    <h3 class="service-title">Aulas individuais</h3>
+                    <p class="service-subtitle">Dedicação personalizada</p>
+                </div>
+            </div>
 
             <img src="./meta/pic-2.png" alt="pic-2" class="pic2 section-block">
-            <div class="service2 section-block"></div>
+            <div class="service2 section-block">
+                <div>
+                    <h3 class="service-title">Aulas em grupo</h3>
+                    <p class="service-subtitle">Toda atenção necessária</p>
+                </div>
+            </div>
 
             <img src="./meta/pic-3.png" alt="pic-3" class="pic3 section-block">
-            <div class="service3 section-block"></div>
+            <div class="service3 section-block">
+                <h3 class="service-title"></h3>
+                <p class="service-subtitle"></p>
+            </div>
 
             <img src="./meta/pic-4.png" alt="pic-4" class="pic4 section-block">
-            <div class="service4 section-block"></div>
+            <div class="service4 section-block">
+                <div>
+                    <h3 class="service-title">Preparação para prova</h3>
+                    <p class="service-subtitle">Aulas adaptadas ao aluno</p>
+                </div>
+            </div>
         </div>
     </section>
+
+    <span id="contact"></span>
+
+    <div class="contact">
+        <h3>Entre em contato:</h3>
+        <p>Telefone : (81) 993965967</p>
+        <p class="bottom">Email : phsb5321@gmail.com</p>
+
+    </div>
+
+    <footer>
+        <h3>by @hunt0k4r</h3>
+    </footer>
 </body>
 
 </html>
